--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (2.0.09) unstable; urgency=low
+
+  * dh_compress: added some FHS support. Though debhelper doesn't put stuff
+    there (and won't until people come up with a general transition strategy or
+    decide to not have a clean transiotion), dh_compress now compresses
+    various files in /usr/share/{man,doc,info}. (Closes: #40892)
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed,  7 Jul 1999 09:55:03 -0700
+
 debhelper (2.0.08) unstable; urgency=low
 
   * dh_*: redirect cd output to /den/null, because CD can actually output
