--- a/dh_installchangelogs.1
+++ b/dh_installchangelogs.1
@@ -19,7 +19,8 @@ If an upstream changelog file is specified as an option, and the package is
 not a native debian package, then this upstream changelog will be installed
 as usr/doc/package/changelog in the package build directory. If the
 changelog is a html file (determined by file extention), it will be
-installed as usr/doc/package/changelog.html instead.
+installed as usr/doc/package/changelog.html instead (with a link to
+usr/doc/package/changelog).
 .SH OPTIONS
 .TP
 .B debhelper options
