--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (2.0.10) unstable; urgency=low
+
+  * dh_compress: compress changelog.html files. (Closes: #40626)
+  * dh_installchangelogs: installs a link from changelog.html.gz to changelog.gz, 
+    because I think it's important that upstream changelogs always be accessable
+    at that name.
+  * dh_compress: removed the usr/share/X11R6/man bit. Note part of FHS.
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed,  7 Jul 1999 10:46:03 -0700
+
 debhelper (2.0.09) unstable; urgency=low
 
   * dh_compress: added some FHS support. Though debhelper doesn't put stuff
