--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.11) unstable; urgency=low
+
+  * At long, long last, dh_installinfo is written. It takes a simple list of
+    info files and figures out the rest for you. (Closes: #15717)
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed,  7 Jul 1999 17:04:48 -0700
+
 debhelper (2.0.10) unstable; urgency=low
 
   * dh_compress: compress changelog.html files. (Closes: #40626)
