--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.12) unstable; urgency=low
+
+  * dh_installinfo: fixed #SECTION# substitution.
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed,  7 Jul 1999 17:51:59 -0700
+
 debhelper (2.0.11) unstable; urgency=low
 
   * At long, long last, dh_installinfo is written. It takes a simple list of
