--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.13) unstable; urgency=low
+
+  * dh_fixperms: FHS fixes (#41058)
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri,  9 Jul 1999 13:07:49 -0700
+
 debhelper (2.0.12) unstable; urgency=low
 
   * dh_installinfo: fixed #SECTION# substitution.
