--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,14 @@
+debhelper (2.0.14) unstable; urgency=low
+
+  * Moved /usr/lib/debhelper to /usr/share/debhelper for FHS compliance
+    (#41174). If you used Dh_lib or something in another package, be sure to
+    update your "use" line and declare an appropriate dependancy. (Closes:
+    #41174)
+  * dh_installxaw: Patch from Josip Rodin <joy@cibalia.gkvk.hr> to fix
+    multiple-stanza xaw file support. (Closes: #41173)
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 12 Jul 1999 11:49:57 -0700
+
 debhelper (2.0.13) unstable; urgency=low
 
   * dh_fixperms: FHS fixes (#41058)
