--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (2.0.15) unstable; urgency=low
+
+  * dh_clean: only force-remove debian/tmp if in v2 mode. In v1 mode, we
+    shouldn't remove it because we may only be acting on a single package.
+    (Closes: #41689)
+
+ -- Joey Hess <joeyh@master.debian.org>  Tue, 20 Jul 1999 19:00:15 -0700
+
 debhelper (2.0.14) unstable; urgency=low
 
   * Moved /usr/lib/debhelper to /usr/share/debhelper for FHS compliance
