--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.17) unstable; urgency=low
+
+  * dh_clean: compat() wasn't exported.
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed, 21 Jul 1999 12:49:52 -0700
+
 debhelper (2.0.16) unstable; urgency=low
 
   * Dh_lib.pm: when looking for debhelper files in debian/, test with -f,
