--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+debhelper (2.0.21) unstable; urgency=low
+
+  * Wow. It turns out dh_installdocs has been doing it wrong and doc-base
+    files have the doc-id inside them. Applied and modified a patch from
+    Peter Moulder <reiter@netspace.net.au> to make it use those id's instead
+    of coming up with it's own. (Closes: #42650)
+
+ -- Joey Hess <joeyh@master.debian.org>  Sun,  8 Aug 1999 10:24:10 -0700
+
 debhelper (2.0.20) unstable; urgency=low
 
   * dh_perl: Patch from Raphael Hertzog <rhertzog@hrnet.fr> to allow
