--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,24 @@
+debhelper (2.0.20) unstable; urgency=low
+
+  * dh_perl: Patch from Raphael Hertzog <rhertzog@hrnet.fr> to allow
+    specification on the command line of alternate paths to search for perl
+    modules. (Closes: #42171)
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri, 30 Jul 1999 09:42:08 -0700
+
+debhelper (2.0.19) unstable; urgency=low
+
+  * dh_installinfo: fixed bug if a info file had no section.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 29 Jul 1999 11:41:11 -0700
+
+debhelper (2.0.18) unstable; urgency=low
+
+  * dh_installxaw: fixed multiple stanza problem, for real this time (patch
+    misapplied last time). (Closes: #41862)
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 26 Jul 1999 13:00:09 -0700
+
 debhelper (2.0.17) unstable; urgency=low
 
   * dh_clean: compat() wasn't exported.
