--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.23) unstable; urgency=low
+
+  * 
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon, 16 Aug 1999 22:43:39 -0700
+
 debhelper (2.0.22) unstable; urgency=low
 
   * Checked all of debhelper into CVS.
