r251:    * Fixed makefile commit target.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,6 @@
 debhelper (2.0.23) unstable; urgency=low
 
-  * 
+  * Fixed makefile commit target.
 
  -- Joey Hess <joeyh@master.debian.org>  Mon, 16 Aug 1999 22:43:39 -0700
 
