r252:    * Fixed makefile commit target.    * Misc changes to make CVS dirs not be copies into package.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 debhelper (2.0.23) unstable; urgency=low
 
   * Fixed makefile commit target.
+  * Misc changes to make CVS dirs not be copies into package.
 
  -- Joey Hess <joeyh@master.debian.org>  Mon, 16 Aug 1999 22:43:39 -0700
 
