--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.24) unstable; urgency=low
+
+  * dh_installdocs: Handle trailing whitespace after Document: name. 
+    Closes: #43148.
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed, 18 Aug 1999 10:23:17 -0700
+
 debhelper (2.0.23) unstable; urgency=low
 
   * Fixed makefile commit target.
