--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,13 @@
+debhelper (2.0.25) unstable; urgency=low
+
+  * Corrected debian/fixlinks to make the correct debian/* symlinks needed
+    for building debhelper.
+  * As a side effect of that, debhelper now parses commands properly when it
+    is building itself, so the /usr/doc/debhelper/examples directory exists
+    again and is populated.
+
+ -- Joey Hess <joeyh@master.debian.org>  Wed, 25 Aug 1999 19:46:08 -0700
+
 debhelper (2.0.24) unstable; urgency=low
 
   * dh_installdocs: Handle trailing whitespace after Document: name. 
