r261:    * No user visible changes. Modified the package to interface better with      my new local build system, which auto-updates the home page when a new      debhelper is built.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,11 @@
+debhelper (2.0.27) unstable; urgency=low
+
+  * No user visible changes. Modified the package to interface better with
+    my new local build system, which auto-updates the home page when a new
+    debhelper is built.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu, 26 Aug 1999 23:20:40 -0700
+
 debhelper (2.0.25) unstable; urgency=low
 
   * Corrected debian/fixlinks to make the correct debian/* symlinks needed
