r262: Mods for new upload method.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.28) unstable; urgency=low
+
+  * 
+
+ -- Joey Hess <joeyh@master.debian.org>  Fri, 27 Aug 1999 19:16:38 -0700
+
 debhelper (2.0.27) unstable; urgency=low
 
   * No user visible changes. Modified the package to interface better with
