r263:    * Oops, dh_installpam was omitted from the package. Added back.      Closes: #43652

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,6 +1,7 @@
 debhelper (2.0.28) unstable; urgency=low
 
-  * 
+  * Oops, dh_installpam was omitted from the package. Added back. 
+    Closes: #43652
 
  -- Joey Hess <joeyh@master.debian.org>  Fri, 27 Aug 1999 19:16:38 -0700
 
