r264:    * dh_shlibdeps: Fixed quoting problem that made it fail on weird file names.      Patch from Devin Carraway <debianbug-debhelper@devin.com>, Closes: #44016

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.29) unstable; urgency=low
+
+  * dh_shlibdeps: Fixed quoting problem that made it fail on weird file names.
+    Patch from Devin Carraway <debianbug-debhelper@devin.com>, Closes: #44016
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu,  2 Sep 1999 13:40:37 -0700
+
 debhelper (2.0.28) unstable; urgency=low
 
   * Oops, dh_installpam was omitted from the package. Added back. 
