--- a/debhelper.1
+++ b/debhelper.1
@@ -3,7 +3,7 @@
 debhelper \- overview of the debhelper commands
 .SH SYNOPSIS
 .B dh_*
-.I "[-v] [-a] [-i] [--no-act] [-ppackage] [-Npackage] [-Ptmpdir]"
+.I "[-v] [-a] [-i] [-s] [--no-act] [-ppackage] [-Npackage] [-Ptmpdir]"
 .SH "DESCRIPTION"
 Debhelper is a collection of programs that can be used in debian/rules files
 to automate common tasks related to building debian binary packages. All the
@@ -12,6 +12,7 @@ document those options and to document debhelper as a whole. For additional
 options, and documentation for each individual command, see the commands' own
 man pages.
 .SH "SHARED DEBHLPER OPTIONS"
+The following command line options are supported by all debhelper programs.
 .TP
 .B \-v, \--verbose
 Verbose mode: show all commands that modify the package build directory.
@@ -29,12 +30,35 @@ Act on all architecture independent packages.
 .B \-ppackage, \--package=package
 Act on the package named "package".
 .TP
+.B \-s, \--same-arch
+This is a smarter version of the -a flag, that is used in some rare
+circumstances. It understands that if the control file lists "Architecture: i386"
+for the package, the package should not be acted on on other architectures. So
+this flag makes the command act on all "Architecture: any" packages, as well
+as on any packages that have the current architecture explicitly specified.
+Constrast to the -a flag, which makes the command work on all packages that
+are not architecture independant.
+.TP
 .B \-Npackage, \--no-package=package
 Do not act on the specified package even if an -a, -i, or -p option lists
 the package as one that should be acted on.
 .TP
 .B \-Ptmpdir, \--tmpdir=tmpdir
 Use "tmpdir" for package build directory. 
+.SH "COMMON DEBHELPER OPTIONS"
+The following command line options are supported by some debhelper programs.
+See the man page of each program for a complete explination of what the
+option does.
+.TP
+.B \-n
+Do not modify postinst/postrm/etc scripts.
+.TP
+.B \-Xitem, \--exclude=item
+Exclude an item from processing.
+.TP
+.B \-A, \-all
+Makes files or other items that are specified on the command line take effect
+in ALL packages acted on, not just the first.
 .SH NOTES
 .TP
 .B Multiple binary package support
@@ -52,8 +76,10 @@ are acted on by debhelper programs, all debhelper programs accept the
 .B -a
 ,
 .B -i
-, and 
+,
 .B -p
+, and
+.B -s
 parameters. These parameters are cumulative. If none are given,
 debhelper programs default to acting on all packages listed in the control
 file.
@@ -68,7 +94,8 @@ for an example of how to use this.
 By default, all debhelper programs assume that the temporary directory used
 for assembling the tree of files in a package is debian/tmp for the first
 package listed in debian/control, and debian/<packagename> for each
-additional package.
+additional package. If DH_COMPAT=2, debian/<packagename> is always used,
+even for the first package.
 .P
 Sometimes, you might want to use some other temporary directory. This is
 supported by the
@@ -83,16 +110,36 @@ binary package the debhelper program will act on.
 .B Other notes
 In general, if any debhelper program needs a directory to exist under
 debian/, it will create it. I haven't bothered to document this in all the
-man pages, but for example, dh_installdeb knows to make debian/tmp/DEBIAN/
+man pages, but for example, dh_installdeb knows to make debian/<foo>/DEBIAN/
 before trying to put files there, dh_installmenu knows you need a
-debian/tmp/usr/lib/menu/ before installing the menu files, etc.
+debian/<foo>/usr/lib/menu/ before installing the menu files, etc.
+.SH "DEBHELPER COMMANDS"
+Here is the complete list of available debhelper commands.
+#LIST#
 .SH ENVIRONMENT
 .TP
 .I DH_VERBOSE
 Enables verbose mode.
 .TP
+.I DH_COMPAT
+Specifies what compatability level debhelper should run at. The default is 1,
+which makes debhelper behave in a manner compatable with the 1.x series of
+debhelper. If set to 2, debhelper's behavior will change to use the new
+features of the 2.x series. Use this with caution, as the 2.x series makes
+major changes that will break most packages. For documentation on these
+changes, read /usr/doc/debhelper/v2
+.TP
 .I DH_NO_ACT
 Enables no-act mode.
+.TP
+.I DH_OPTIONS
+Anything in this variable will be prepended to the command line
+arguments of all debhelper commands. This in useful in some situations,
+for example, if you need to pass -p to all debhelper commands that will be
+run. If you use DH_OPTIONS, be sure to use "dh_testversion 1.1.17" - older
+debhelpers will ignore it and do things you don't want them to. One very
+good way to set DH_OPTIONS is by using "Target-specific Variable Values" in
+your debian/rules file. See the make documentation for details on doing this.
 .SH "SEE ALSO"
 .TP
 .BR /usr/doc/debhelper/README
@@ -100,5 +147,8 @@ An introduction to debhelper.
 .TP
 .BR /usr/doc/debhelper/examples/
 A set of example debian/rules files that use debhelper.
+.TP
+.BR http://kitenet.net/programs/debhelper/
+Debhelper web site.
 .SH AUTHOR
 Joey Hess <joeyh@master.debian.org>
