r266:    * FHS complience. Patch from Johnie Ingram <johnie@netgod.net>.      For the most part, this was a straight-forward substitution,      dh_installmanpages needed a non-obvious change though.    * Closes: #42489, #42587, #41732.    * dh_installdocs: Adds code to postinst and prerm as specified in      http://www.debian.org/Lists-Archives/debian-ctte-9908/msg00038.html,      to make /usr/doc/<package> a compatability symlink to      /usr/share/doc/<package>. Note that currently if something exists in      /usr/doc/<package> when the postinst is run, it will silently not make      the symlink. I'm considering more intellingent handing of this case.    * Note that if you build a package with this version of debhelper, it will      use /usr/share/man, /usr/share/doc, and /usr/share/info. You may need to      modify other files in your package that reference the old locations.

--- a/debhelper.1
+++ b/debhelper.1
@@ -85,7 +85,7 @@ debhelper programs default to acting on all packages listed in the control
 file.
 .P
 See
-.BR /usr/doc/debhelper/examples/rules.multi
+.BR /usr/share/doc/debhelper/examples/rules.multi
 for an example of how to use this.
 .RE
 .TP
@@ -127,7 +127,7 @@ which makes debhelper behave in a manner compatable with the 1.x series of
 debhelper. If set to 2, debhelper's behavior will change to use the new
 features of the 2.x series. Use this with caution, as the 2.x series makes
 major changes that will break most packages. For documentation on these
-changes, read /usr/doc/debhelper/v2
+changes, read /usr/share/doc/debhelper/v2
 .TP
 .I DH_NO_ACT
 Enables no-act mode.
@@ -142,10 +142,10 @@ good way to set DH_OPTIONS is by using "Target-specific Variable Values" in
 your debian/rules file. See the make documentation for details on doing this.
 .SH "SEE ALSO"
 .TP
-.BR /usr/doc/debhelper/README
+.BR /usr/share/doc/debhelper/README
 An introduction to debhelper.
 .TP
-.BR /usr/doc/debhelper/examples/
+.BR /usr/share/doc/debhelper/examples/
 A set of example debian/rules files that use debhelper.
 .TP
 .BR http://kitenet.net/programs/debhelper/
