--- a/dh_compress.1
+++ b/dh_compress.1
@@ -11,10 +11,10 @@ that pointed to the files before they were compressed are updated to point
 to the new files.
 .P
 By default, dh_compress compresses files that debian policy mandates should
-be compressed, namely all files in usr/info, usr/man, usr/X11R6/man, and
-all files in usr/doc that are larger than 4k in size, except
-the copyright file, .html files and .gif files, and all changelog files. It
-skips any files that appear to be already compressed (based on their
+be compressed, namely all files in usr/share/info, usr/share/man, 
+usr/X11R6/man, and all files in usr/share/doc that are larger than 4k in size,
+(except the copyright file, .html files and .gif files), and all changelog 
+files. It skips any files that appear to be already compressed (based on their
 extentions).
 .P
 If a debian/package.compress file exists (debian/compress may be used for the
