--- a/dh_installmanpages.1
+++ b/dh_installmanpages.1
@@ -1,66 +1,58 @@
-.TH DH_INSTALLDOCS 1
+.TH DH_INSTALLMANPAGES 1 "" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
 dh_installmanpages \- install man pages into package build directories
 .SH SYNOPSIS
 .B dh_installmanpages
-.I "[-v] [-a] [-i] [-ppackage] [file ...]"
+.I "[debhelper options] [file ...]"
 .SH "DESCRIPTION"
 dh_installmanpages is a debhelper program that is responsible for
-automatically installing man pages into usr/man/ and usr/X11R6/man/ in
+automatically installing man pages into usr/share/man/ and usr/X11R6/man/ in
 package build directories.
 .P
 dh_installmanpages scans the current directory and all subdirectories for
-filenames that look like man pages. It uses
+filenames that look like man pages. (Note that only real files are looked
+at; symlinks are ignored.) It uses
 .BR file (1)
 to verify that the files are in the correct format. Then, based on the
-files' extentions, it installs them into the correct man directory.
+files' extensions, it installs them into the correct man directory.
 .P
 All filenames specified as parameters will be skipped by dh_installmanpages.
 This is useful if by default it installs some man pages that you do not want
 to be installed.
+.P
+After the man page installation step, dh_installmanpages will check to see if
+any of the man pages are ".so" links. If so, it changes them to symlinks.
 .SH OPTIONS
 .TP
-.B \-v
-Verbose mode; show all commands that modify the package build directory.
-.TP
-.B \-a
-Install man pages into all architecture dependent packages.
-.TP
-.B \-i
-Install man pages into all architecture independent packages.
-.TP
-.B \-ppackage
-Install man pages into the package named "package".
+.B debhelper options
+See
+.BR debhelper (1)
+for a list of options common to all debhelper commands.
 .TP
 .B file ...
 Do not install these files as man pages, even if they look like valid man
 pages.
 .SH NOTES
-The
-.B \-a
-.B \-i
-and
-.B \-p
-arguments are cumulative. If none are specified, then all packages listed in
-the control file will be effected.
-.P
 dh_installmanpages will install the man pages it finds into
 .B all
 packages you tell it to act on, since it can't tell what package the man
 pages belong in.
 .SH ENVIRONMENT
-.TP
-.I DH_VERBOSE
-Enables verbose mode
+See
+.BR debhelper (1)
+for a list of environment variables that affect all debhelper commands.
 .SH "SEE ALSO"
-.BR /usr/doc/debhelper/README
+.BR debhelper (1)
 .SH BUGS
-Man pages with the extention
+Man pages with the extension
 .B .man
 are not automatically installed. 
 .P
 Files specified as parameters that contain spaces in their filenames will
 not be processed properly.
+.P
+By default, all man pages are installed into all binary packages, which is
+almost never what you really want (use -p to work around this).
 .P
 This is a "Do what I Mean" type program - you have been warned!
 .SH AUTHOR
