--- a/dh_debstd.1
+++ b/dh_debstd.1
@@ -5,7 +5,7 @@ dh_debstd \- mimic debstd with debhelper commands
 .B dh_debstd
 .I "[-v] [--no-act] [-m] [-c] [-u] [-s] [[changelog] file ...]"
 .SH "DESCRIPTION"
-dh_debstd is a debhelper command that mimics the behavior of debstd, by
+dh_debstd is a program that mimics the behavior of debstd, by
 calling other debhelper commands. Its behavior is not a complete nor an
 exact copy of what debstd does, but it should be close enough to be usable.
 .P
@@ -59,14 +59,17 @@ generated if dh_debstd notices scripts without "#DEBHELPER#" in them.
 Enables verbose mode
 .TP
 .I DH_NO_ACT
-Enables no-act mode (see above).
+Enables no-act mode
 .SH "SEE ALSO"
-.BR /usr/doc/debhelper/from-debstd
-,
+.TP
+.BR /usr/share/doc/debhelper/from-debstd
+.TP
 .BR debstd (1)
+.TP
+.BR debhelper (1)
 .SH BUGS
 It doesn't completly mimic debstd. Some things debstd handles are not supported
-by debhelper. With the exception of buildinfo.Debian files, everything that
-is not supported will generate a warning message.
+by debhelper. Everything that is not supported will generate a warning
+message if you try to use it.
 .SH AUTHOR
 Joey Hess <joeyh@master.debian.org>
