--- a/dh_fixperms.1
+++ b/dh_fixperms.1
@@ -1,45 +1,38 @@
-.TH DH_INSTALLDOCS 1
+.TH DH_FIXPERMS 1 "" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
 dh_fixperms \- fix permissions of files in package build directories
 .SH SYNOPSIS
 .B dh_fixperms
-.I "[-v] [-a] [-i] [-ppackage]"
+.I "[debhelper options] [-Xitem]"
 .SH "DESCRIPTION"
 dh_fixperms is a debhelper program that is responsible for setting the
-permissions of files in package build directories to a sane state.
+permissions of files and directories in package build directories to a
+sane state -- a state that complies with Debian policy.
 .P
-dh_fixperms makes all files in usr/doc in the package build directory be 
-mode 644. It also changes the permissions of all man pages to mode 644.
-It makes all files be owned by root, and it removes group and other write
-permission from all files.
+dh_fixperms makes all files in usr/share/doc in the package build directory
+(excluding files in the examples/ directory) be mode 644. It also changes 
+the permissions of all man pages to mode 644. It makes all files be owned by 
+root, and it removes group and other write permission from all files.
+It removes execute permissions from any libraries that have it set. Finally,
+it removes the setuid and setgid bits from all files in the package.
 .SH OPTIONS
 .TP
-.B \-v
-Verbose mode; show all commands that modify the package build directory.
+.B debhelper options
+See
+.BR debhelper (1)
+for a list of options common to all debhelper commands.
 .TP
-.B \-a
-Fix permissions for all architecture dependent packages.
-.TP
-.B \-i
-Fix permissions for all architecture independent packages.
-.TP
-.B \-ppackage
-Fix permissions for the package named "package".
-.SH NOTES
-The
-.B \-a
-.B \-i
-and
-.B \-p
-arguments are cumulative. If none are specified, then all packages listed in
-the control file will have thier permissions fixed.
+.B \-Xitem, \--exclude=item
+Exclude files that contain "item" anywhere in their filename from having
+their permissions changed. You may use this option multiple times to build 
+up a list of things to exclude.
 .SH ENVIRONMENT
-.TP
-.I DH_VERBOSE
-Enables verbose mode
+See
+.BR debhelper (1)
+for a list of environment variables that affect all debhelper commands.
 .SH "SEE ALSO"
-.BR /usr/doc/debhelper/README
+.BR debhelper (1)
 .SH "CONFORMS TO"
-Debian policy, version 2.3.0.0
+Debian policy, version 3.0.1
 .SH AUTHOR
 Joey Hess <joeyh@master.debian.org>
