--- a/dh_link.1
+++ b/dh_link.1
@@ -24,14 +24,12 @@ ackage dh_link is told to act on. By default, this is the first binary
 package in debian/control, but if you use -p, -i, or -a flags, it will be 
 the first package specified by those flags.
 .P
-Be sure to only use file names relative to the package build
-directory. Ie, "/usr/bin/foo" should not be used, use "usr/bin/foo" instead.
-Also, be sure you
+Be sure you
 .B do
 specify the full filename to both the source and destination files (unlike
 you would do if you were using something like
 .BR ln (1)
-)
+).
 .P
 dh_link will generate symlinks that comply with debian policy - absolute
 when policy says they should be absolute, and relative links with as short a
@@ -54,10 +52,10 @@ this in the package build directory of the first package acted on.
 (Or in all packages if -A is specified.)
 .SH EXAMPLES
 .TP
-.B dh_link usr/man/man1/foo.1 usr/man/man1/bar.1
+.B dh_link usr/share/man/man1/foo.1 usr/share/man/man1/bar.1
 Make bar.1 be a symlink to foo.1
 .TP
-.B dh_link var/lib/foo usr/lib/foo usr/X11R6/man/man1/foo.1x usr/man/man1/bar.1
+.B dh_link var/lib/foo usr/lib/foo usr/X11R6/man/man1/foo.1x usr/share/man/man1/bar.1
 Make /usr/lib/foo/ be a link to /var/lib/foo/, and bar.1 be a symlink to the
 X man page foo.1x
 .SH ENVIRONMENT
@@ -70,6 +68,6 @@ for a list of environment variables that affect all debhelper commands.
 It's impossible to specify filenames with spaces or other whitespace in them
 in debian/links file. This is more a historical design flaw than a bug.
 .SH "CONFORMS TO"
-Debian policy, version 2.5.0.0
+Debian policy, version 3.0.1
 .SH AUTHOR
 Joey Hess <joeyh@master.debian.org>
