--- a/dh_perl.1
+++ b/dh_perl.1
@@ -1,9 +1,9 @@
-.TH DH_PERLCHECK 1 "22 June 1999" "Debhelper Commands" "Debhelper Commands"
+.TH DH_PERL 1 "22 June 1999" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
 dh_perl \- calculates perl scripts & modules dependencies
 .SH SYNOPSIS
 .B dh_perl
-.I "[debhelper options] [-k]"
+.I "[debhelper options] [-k] [-d] [library dirs ...]"
 .SH "DESCRIPTION"
 dh_perl is a debhelper program that is responsible for generating
 the perl:Depends substitutions and adding them to substvars files. 
@@ -28,6 +28,22 @@ for a list of options common to all debhelper commands.
 .TP
 .B -k
 Keep .packlist files.
+.TP
+.B -d
+In some specific cases you may want to depend on a -base package
+(ie perl-5.00X-base or perl5-base). If so, you can pass
+the -d option to make
+.BR dh_perl 
+generate a dependency on the correct base package. This is only necessary
+for some modules that are included in the base system.
+.TP
+.B library dirs
+If your package does install perl modules in non-standard 
+directories, you can make
+.BR dh_perl
+check those directories by passing their names on the command line.
+.BR dh_perl
+will only check usr/lib/perl5 by default.
 .SH ENVIRONMENT
 See
 .BR debhelper (1)
@@ -37,7 +53,7 @@ for a list of environment variables that affect all debhelper commands.
 .BR debhelper (1)
 .SH "CONFORMS TO"
 .P
-Debian policy, version 2.5.0.0
+Debian policy, version 3.0.1
 .P
 Perl policy, version 1.0
 .SH AUTHOR
