--- a/dh_strip.1
+++ b/dh_strip.1
@@ -1,9 +1,9 @@
-.TH DH_STRIP 1
+.TH DH_STRIP 1 "" "Debhelper Commands" "Debhelper Commands"
 .SH NAME
 dh_strip \- strip executables, shared libraries, and some static libraries.
 .SH SYNOPSIS
 .B dh_strip
-.I "[-v] [-a] [-i] [-ppackage]"
+.I "[debhelper options] [-Xitem]"
 .SH "DESCRIPTION"
 dh_strip is a debhelper program that is responsible for stripping
 executables, shared libraries, and static libraries that are not used for
@@ -13,33 +13,22 @@ It assumes that files that have names like lib*_g.a are static libraries
 used in debugging, and will not strip them.
 .SH OPTIONS
 .TP
-.B \-v
-Verbose mode; show all commands that modify the package build directory.
+.B debhelper options
+See
+.BR debhelper (1)
+for a list of options common to all debhelper commands.
 .TP
-.B \-a
-Strip files in all architecture dependent packages.
-.TP
-.B \-i
-Strip files in all architecture independent packages (likely, this is
-pointless :-).
-.TP
-.B \-ppackage
-Strip files for the package named "package".
-.SH NOTES
-The
-.B \-a
-.B \-i
-and
-.B \-p
-arguments are cumulative. If none are specified, then all packages listed in
-the control file will have their files stripped.
+.B \-Xitem, \--exclude=item
+Exclude files that contain "item" anywhere in their filename from being
+stripped. You may use this option multiple times to build up a list of
+things to exclude.
 .SH ENVIRONMENT
-.TP
-.I DH_VERBOSE
-Enables verbose mode
+See
+.BR debhelper (1)
+for a list of environment variables that affect all debhelper commands.
 .SH "SEE ALSO"
-.BR /usr/doc/debhelper/README
+.BR debhelper (1)
 .SH "CONFORMS TO"
-Debian policy, version 2.3.0.0
+Debian policy, version 3.0.1
 .SH AUTHOR
 Joey Hess <joeyh@master.debian.org>
