r267:    * dh_installinfo: use FHS info dir. I wonder how I missed that..

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.41) unstable; urgency=low
+
+  * dh_installinfo: use FHS info dir. I wonder how I missed that..
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon,  6 Sep 1999 13:22:08 -0700
+
 debhelper (2.0.40) unstable; urgency=low
 
   * FHS complience. Patch from Johnie Ingram <johnie@netgod.net>.
