r268:    * dh_installinfo: failed pretty miserably if the info file's section      contained '/' characters. Doesn't now.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+debhelper (2.0.42) unstable; urgency=low
+
+  * dh_installinfo: failed pretty miserably if the info file's section
+    contained '/' characters. Doesn't now.
+
+ -- Joey Hess <joeyh@master.debian.org>  Mon,  6 Sep 1999 16:33:13 -0700
+
 debhelper (2.0.41) unstable; urgency=low
 
   * dh_installinfo: use FHS info dir. I wonder how I missed that..
