r270:    * Corrected example rules files, which had some messed up targets.

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.43) unstable; urgency=low
+
+  * Corrected example rules files, which had some messed up targets.
+
+ -- Joey Hess <joeyh@master.debian.org>  Thu,  9 Sep 1999 11:22:09 -0700
+
 debhelper (2.0.42) unstable; urgency=low
 
   * dh_installinfo: failed pretty miserably if the info file's section
