r272:    * dh_compress: fixed #ARGV bug (again) Closes: #44853

--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+debhelper (2.0.44) unstable; urgency=low
+
+  * dh_compress: fixed #ARGV bug (again) Closes: #44853
+
+ -- Joey Hess <joeyh@master.debian.org>  Sat, 11 Sep 1999 13:04:15 -0700
+
 debhelper (2.0.43) unstable; urgency=low
 
   * Corrected example rules files, which had some messed up targets.
